--- a/kolory.html
+++ b/kolory.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomocnik CSS</title>
     <link rel="stylesheet" href="../05/styl2.css">
-    <script src="../05/main.js"></script>
+    <script src="../05/main.js" defer></script>
 </head>
 <body>
     <div id="kontener">
+        <div class="heady">
         <header class="head1">
             <h1>
-                Poomocnik CSS
+                Pomocnik CSS
             </h1>
         </header>
         <header class="head2">
@@ -22,15 +23,17 @@
                 <li><a href="https://www.w3schools.com/css/" target="_blank">Pomoc</a></li>
             </ul>
         </header>
+    </div>
         <section class="section1">
             <h2>Podaj składową H koloru w kodzie HSL</h2>
             <p>0 do 30 czerwienie, do 60 żółcie, do 150 zielenie, do 250 niebieskie, do 360 fiolet i purpura</p>
             <img src="../05/kolory.jpg" alt="Przestrzeń barw HSL">
-            <input type="number" placeholder="0 – 360" max="360" min="0" id="input1">
+            <br>
+            <input type="number" placeholder="0 – 360" max="360" min="0" id="input1" style="width:200px;">
             <input type="button" value="Generuj paletę" onclick="funkcja1()">
             <table id="table1">
                 <tr>
-                    <td>Kolor główny</td>
+                    <td colspan="4">Kolor główny</td>
                 </tr>
                 <tr>
                     <td>Kolor 2</td>
